# Avr-Rust_nano

./: README.md
Control_Dc/: Cargo.toml
Control_Dc/src/: main.rs
Old_versions/Control_Dc/: Ravedude.toml
Old_versions/Pwm1/: README.md
Old_versions/Pwm2/src/: main.rs
Pwm/: Cargo.toml
Pwm/src/: main.rs
Pwm1/src/: main.rs
Pwm2/: README.md
control-motor-1/: Cargo.toml  README.md
control-motor-2/: Cargo.toml  README.md
control-motor-2/src/: main.rs
control-motor-3/: Cargo.toml  README.md
control-motor-3/src/: main.rs
correct/pwm1/: Cargo.toml  README.md
correct/pwm1/src/: main.rs
correct/pwm2/: README.md
pwm2/: Cargo.toml
pwm2/src/: main.rs
