[package]
name = "nano-1"
version = "0.1.0"
authors = ["loken"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nano-1"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0"

arduino-hal = { git = "https://github.com/Rahix/avr-hal", package = "arduino-hal", features = ["arduino-nano"], branch = "main" }



# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
