[package]
name = "nano-1"
version = "0.1.0"
authors = ["loken"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nano-1"
test = false
bench = false

# --- Desactivar std ---
[dependencies]
panic-halt = "0.2.0"    # Para detener el programa si ocurre panic

# --- Crates para AVR -->
[dependencies.avr-device]
version = "0.3.0"
features = ["atmega328p"]

# Opcional: si quieres macros y utilidades de bitflags
[dependencies.bitflags]
version = "1.3.3"

[profile.release]
codegen-units = 1   # optimización máxima
lto = true
opt-level = "s"
